# controllers/user.controller.js
@@ -204,7 +204,7 @@ module.exports = {
             if (!emailOrNoTelp || !password) {
                 return res.status(400).json({
                     status: false,
-                    message: "Email or No. Telp and password are required!",
+                    message: "Email atau No. Telp dan password harus diisi!",
                     data: null,
                 });
             }
@@ -219,18 +219,18 @@ module.exports = {
             });
 
             if (!user) {
-                return res.status(400).json({
+                return res.status(404).json({
                     status: false,
-                    message: "Email tidak valid atau tidak. telp atau kata sandi!",
+                    message: "Email atau nomor telepon tidak valid!",
                     data: null,
                 });
             }
 
             const isPasswordCorrect = await bcrypt.compare(password, user.password);
             if (!isPasswordCorrect) {
-                return res.status(400).json({
+                return res.status(401).json({
                     status: false,
-                    message: "Email tidak valid atau tidak. telp atau kata sandi!",
+                    message: "Password tidak valid!",
                     data: null,
                 });
             }
@@ -246,7 +246,7 @@ module.exports = {
 
                 const deleteUser = await prisma.user.delete({ where: { id: user.id } })
 
-                return res.status(400).json({
+                return res.status(403).json({
                     status: false,
                     message: "Akun Belum terverifikasi, silahkan register ulang!",
                     data: null,
@@ -298,7 +298,7 @@ module.exports = {
             if (!findUser) {
                 return res.status(404).json({
                     status: false,
-                    message: "Email tidek ditemukan",
+                    message: "Email tidak ditemukan",
                 });
             }
             const token = jwt.sign({ email: findUser.email }, JWT_SECRET_KEY);
@@ -355,7 +355,7 @@ module.exports = {
                 return res.status(400).json({
                     status: false,
                     message:
-                        "Password and Password confirmation must be required",
+                        "Password dan Konfirmasi password harus diisi",
                     data: null,
                 });
             }
@@ -364,7 +364,7 @@ module.exports = {
                 return res.status(400).json({
                     status: false,
                     message:
-                        "Please ensure that the password and password confirmation match!",
+                        "Pastikan Password dan konfirmasi Password cocok!",
                     data: null,
                 });
             }
@@ -379,7 +379,7 @@ module.exports = {
             if (!user) {
                 return res.status(404).json({
                     status: false,
-                    message: "User not found",
+                    message: "Pengguna tidak ditemukan",
                     data: null,
                 });
             }
@@ -387,7 +387,7 @@ module.exports = {
             if (isSamePassword) {
                 return res.status(400).json({
                     status: false,
-                    message: "New password cannot be the same as the old password!",
+                    message: "Password baru tidak boleh sama dengan Password lama!",
                     data: null,
                 });
             }
@@ -402,7 +402,7 @@ module.exports = {
 
             res.status(200).json({
                 status: true,
-                message: "Reset user password successfully!",
+                message: "Berhasil mengatur ulang password pengguna!",
                 data: updateUser,
             });
 
@@ -427,7 +427,7 @@ module.exports = {
 
             return res.status(200).json({
                 status: true,
-                message: "User data retrieved successfully",
+                message: "Data pengguna berhasil diambil",
                 data: { id: user.id, name: user.name, no_telp: user.no_telp, avatar_url: user.avatar_url },
             });
 
